teacher journal gap fixed

--- a/src/components/Journal/journalStyles.scss
+++ b/src/components/Journal/journalStyles.scss
@@ -162,7 +162,7 @@ scrollbar-width: none;  /* Firefox */
     }
 }
 .journalColumnsCenterItem__container:last-child{
-    padding-right: 15px;
+    padding-right: 5px;
 }
 .journal_lessonTypeSelect{
     width: 68px !important;
@@ -420,7 +420,7 @@ scrollbar-width: none;  /* Firefox */
     margin-left: 55px;
 }
 .specialLessonType_last_cell{
-    margin-right: 55px;
+    margin-right: 45px;
 }
    
 
