--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -42,7 +42,7 @@ button{
 .primary_button{
 	width: fit-content;
 	min-width: 191px;
-    height: 41px;	
+    height: 40px;	
     border-radius: 10px 5px;
 	display: flex;
 	align-items: center;
